--- a/app/blueprints/user/templates/user/create_sync.html
+++ b/app/blueprints/user/templates/user/create_sync.html
@@ -72,7 +72,7 @@
                         <div class="grid md:grid-cols-2 sm:gap-4 lg:gap-6 sm:grid-cols-1 lg:grid-cols-2 mb-5">
                             <div class="col-span-1">
                                 <div class="text-center full">
-                                    <span class="text-lg mb-1 mt-10 text-gray-700" style="font-size: 24px;">1. Add a destination store to sync</span><br/>
+                                    <span class="text-lg mb-1 mt-10 text-gray-700" style="font-size: 24px;">1. Add a destination store to sync with</span><br/>
                                     <span class="mb-5 text-sm font-medium text-gray-500">This is another store that you want to sell your products through.</span>
                                 </div>
                                 <div class="rounded-lg bg-white border border-gray-200 pb-10 pl-7 pr-7 mt-5 mb-8">
