--- a/app/blueprints/user/templates/user/sync.html
+++ b/app/blueprints/user/templates/user/sync.html
@@ -37,7 +37,7 @@
 <body>
 {#{% include '/user/includes/mobile.html' ignore missing %}#}
 <div class="bg-gray-100" style="height:100vh;overflow-y:hidden;">
-    {% with page='dashboard' %}{% include '/user/includes/main_header.html' ignore missing %}{% endwith %}
+    {% with page='stores' %}{% include '/user/includes/main_header.html' ignore missing %}{% endwith %}
     <div class="relative z-10 flex-shrink-0 flex h-16 bg-white shadow">
         <button class="px-4 border-r border-gray-200 text-gray-500 focus:outline-none focus:bg-gray-100 focus:text-gray-600 md:hidden"
                 aria-label="Open sidebar" onclick="OpenSidebar()">
