--- a/app/blueprints/user/templates/user/includes/main_header.html
+++ b/app/blueprints/user/templates/user/includes/main_header.html
@@ -18,12 +18,11 @@
                            class="px-3 py-2 rounded-md text-sm font-medium {% if page == 'dashboard' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Dashboard</a>
                         <span class="px-3 py-2 rounded-md ml-3 text-sm font-medium {% if page == 'product' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Product</span>
                         <a href="{{ url_for('user.stores') }}"
-                           class="ml-2 px-3 py-2 rounded-md text-sm font-medium {% if page == 'stores' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Stores</a>
+                           class="ml-2 px-3 py-2 rounded-md text-sm font-medium {% if page == 'stores' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">My Syncs</a>
                         <a href="{{ url_for('user.settings') }}"
                            class="ml-2 px-3 py-2 rounded-md text-sm font-medium {% if page == 'settings' %}text-white bg-indigo-800{% else %}text-indigo-200 hover:text-white hover:bg-indigo-600{% endif %} focus:outline-none focus:text-white focus:bg-indigo-600">Settings</a>
                         <a href="{{ url_for('user.sync') }}"
-                           class="ml-5 px-3 py-2 rounded-md text-sm font-medium text-indigo-700 bg-white hover:text-white hover:bg-indigo-600 focus:outline-none focus:text-white focus:bg-indigo-600">Sync
-                            a store!</a>
+                           class="ml-5 px-3 py-2 rounded-md text-sm font-medium text-indigo-700 bg-white hover:text-white hover:bg-indigo-600 focus:outline-none focus:text-white focus:bg-indigo-600">Sync a new store!</a>
                     </div>
                 </div>
             </div>
