--- a/app/blueprints/user/templates/user/settings.html
+++ b/app/blueprints/user/templates/user/settings.html
@@ -136,7 +136,7 @@
                                         {% else %}
                                             <a href="{{ url_for('user.sync') }}"
                                                class="inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:text-gray-800 active:bg-gray-50 transition ease-in-out duration-150">
-                                                Sync a store
+                                                Sync a new store
                                             </a>
                                         {% endif %}
                                     </dd>
