--- a/app/blueprints/user/templates/user/includes/product_table.html
+++ b/app/blueprints/user/templates/user/includes/product_table.html
@@ -48,8 +48,8 @@
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
         <input type="hidden" name="sync_id" value="{{ sync_id }}" />
-        {% for product in products %}
-            <tr class="product-row">
+        {% for product in products|sort(attribute='created') %}
+            <tr class="product-row pb-2">
                 {% if sync_id %}
                     <td class="px-6 py-4 whitespace-no-wrap text-center" style="width:5%">
                         <div class="flex items-center h-5">
@@ -64,13 +64,16 @@
                     <div class="flex items-center">
                         <div class="flex-shrink-0 h-10 w-10">
                             {% for image in product.images %}
-                                <img class="h-10 w-10 rounded-full"
+                                <img class="w-10"
                                      src="{{ image['src'] }}" alt="">
                             {% endfor %}
                         </div>
                         <div class="ml-4 truncate">
                             <div class="text-sm leading-5 font-medium text-gray-900 truncate">
-                                 {{ product.product_id }} - {{ product.title }}
+                                <a href="{{ url_for('user.product', product_id=product.product_id) }}"
+                                   class="text-indigo-600 hover:text-indigo-900">
+                                 {{ product.title }}
+                                </a>
                             </div>
                             <div class="text-sm leading-5 text-gray-500">
                                 {% if product.variants | any_attribute_filter('requires_shipping', true) %}
@@ -83,18 +86,23 @@
                     </div>
                 </td>
                 <td class="px-6 py-4 whitespace-no-wrap" style="width:30%">
-                    <div class="text-sm leading-5 text-gray-500 truncate">{{ product.description }}</div>
+                    <div class="text-sm leading-5 text-gray-500 truncate">{{ product.description|safe }}</div>
                 </td>
-                <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500" style="width:10%">
+                <td class="px-6 py-4 whitespace-no-wrap text-sm leading-5 text-gray-500" style="width:10%;">
                     {% for variant in product.variants %}
                         <div class="text-sm {% if not loop.last %}mb-2{% endif %} leading-5 text-gray-500">
-                            #{{ variant['sku'] }}</div>
+                            {% if variant['sku'] %}
+                                {{ variant['sku'] }}
+                            {% endif %}
+                        </div>
                     {% endfor %}
                 </td>
-                <td class="px-6 py-4 whitespace-no-wrap" style="width:10%">
+                <td class="px-6 py-4 whitespace-no-wrap" style="width:10%;">
                     {% if product.variants | any_attribute_filter('requires_shipping', true) %}
                         {% for variant in product.variants %}
-                            <div class="text-sm {% if not loop.last %}mb-2{% endif %} leading-5 text-gray-500">{{ variant['option1'] }}</div>
+                            <div class="text-sm {% if not loop.last %}mb-2{% endif %} leading-5 text-gray-500">
+                                {{ variant['option1'] }}
+                            </div>
                         {% endfor %}
                     {% else %}
                         <div class="text-sm leading-5 text-gray-500">N/A</div>
