--- a/app/blueprints/user/templates/user/sync.html
+++ b/app/blueprints/user/templates/user/sync.html
@@ -69,7 +69,7 @@
         <div class="max-w-10xl mx-auto px-4 sm:px-6 md:px-8" style="height:80vh;">
             <!-- Replace with your content -->
             {% if source.url and destination.url %}
-                <h1 class="mt-3 mb-4 text-md font-w700 text-gray-900">Please choose products to sync from <span class="text-indigo-500">{{ source.url }}</span> to <span class="text-indigo-500">{{ destination.url }}</span>:</h1>
+                <h1 class="mt-3 mb-4 text-md font-w700 text-gray-900">Please choose which products to sync from <span class="text-indigo-500">{{ source.url }}</span> to <span class="text-indigo-500">{{ destination.url }}</span>:</h1>
             {% endif %}
 
             <form action="{{ url_for('user.submit_sync') }}" method="post">
